identity-aware-proxy/kubernetes/oauth2-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/component: identity-aware-proxy
